fix styling and header-related clipping properly
This expands the scope of the PR a bit to fix the problems related to the Header z-index and clipping, and therefore solves, at the source, problems I was having here with the header.

Also improves the styling of the suggest menu and the suggest-details.

--- a/webui/src/scss/_common.scss
+++ b/webui/src/scss/_common.scss
@@ -48,7 +48,7 @@ legend {
 }
 
 .btn-group {
-	overflow: hidden;
+	//overflow: hidden; // if this is this needed it should be scoped properly. As written it prevents dropdown menus!
 	&.margin-bottom {
 		margin-bottom: 1rem;
 	}
