--- a/webui/src/scss/_layout.scss
+++ b/webui/src/scss/_layout.scss
@@ -91,6 +91,11 @@ form.row > * {
 	margin-right: 5px;
 }
 
+// unomment this if header is assigned position=sticky in Header.tsx
+// .header.header-sticky {
+// 	z-index: 40; // monaco-edit's suggest-details pane is buried if z-index > 41; use 40 just as a round number
+// }
+
 .header {
 	.nav-link:hover {
 		color: #ddd;
@@ -118,6 +123,7 @@ form.row > * {
 	--menu-hover-color: #fff;
 	--menu-hover-bg: var(--cui-info);
 	color: var(--menu-color); // this may not affect anything
+	//overflow: visible; // uncomment this if unscoped .btn-group defined in _common.scss needs to make overflow hidden
 
 	// note: <CDropdownToggle color="primary"...> set a group of color properties. Here we extend or override as needed.
 	.help-toggle {
@@ -138,6 +144,7 @@ form.row > * {
 		box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3); // Professional shadow to the dropdown
 		border-radius: 6px; // Slightly rounded corners
 		min-width: 240px; // Slightly wider for breathing room
+		position: inherit;
 
 		.dropdown-item {
 			font-size: 0.95rem; // Slightly smaller, more refined
